--- a/BG3c.html
+++ b/BG3c.html
@@ -64,16 +64,16 @@
 <div id="headca"><center>CATEGORY</center></div>
 
   <div class="row no-gutters">
-    <div class="col-md-4 col-12" >
-    	<a href="BG-fake.html"><img id="" src="https://i.imgur.com/N5Xm40C.jpg" style="width: 100%" >
-      		<div class="centered w"><center>FAKENEWS</center></div></a>
+    <div class="col-33" >
+    	<a href="BG-fake.html"><img id="c1" src="https://i.imgur.com/N5Xm40C.jpg" style="width: 100%" >
+      		<div class="centered w"><center>FAKE NEWS</center></div></a>
     </div>
-    <div class="col-md-4 col-12">
-      <a href="BG-Hoax.html"><img id="" src="https://i.imgur.com/RnK3ORD.jpg" style="width: 100%" >
+    <div class="col-33">
+      <a href="BG-Hoax.html"><img id="c2" src="https://i.imgur.com/RnK3ORD.jpg" style="width: 100%" >
       	<div class="centered w"><center>HOAX</center></div></a>
     </div>
-     <div class="col-md-4 col-12">
-      <a href="BG-Phising.html"><img id="" src="https://i.imgur.com/TBu6Oc0.jpg" style="width: 100%" >
+     <div class="col-33">
+      <a href="BG-Phising.html"><img id="c3" src="https://i.imgur.com/TBu6Oc0.jpg" style="width: 100%" >
       	<div class="centered w"><center>PHISHING</center></div></a>
     </div>
   </div>
