--- a/aboutus.html
+++ b/aboutus.html
@@ -13,7 +13,7 @@
   <title></title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body background="https://i.imgur.com/TwdywdI.jpg" class="bg">  
+<body  class="bgus">  
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -59,9 +59,9 @@
       </ul>
   </div>
 </nav>
-<center><img src="https://i.imgur.com/glax40v.png" width="50%" style="height: 25%"></center>
+<center><img src="https://i.imgur.com/3ZXqJR5.png" width="60%" style="margin:30px;"></center>
 <div class="w" style="font-size: 30px"><center>CREATED BY<br>MR.KANTACHAT JANYA<br>MR.SARATOON KHUNSANIT</center></div>
-<div class="w" style="line-height: 2; font-size: 30px;"><center>THIS WEBSITE IS PART OF CSS227 WEB PROGRAMMING.<br>KING MONGKUT'S UNIVERSITY OF TECHNOLOGY THONBURI</center></div>
+<div class="w" style="line-height: 1.5; font-size: 30px;"><center>THIS WEBSITE IS PART OF CSS227 WEB PROGRAMMING.<br>KING MONGKUT'S UNIVERSITY OF TECHNOLOGY THONBURI</center></div>
 
   
 </body>
