--- a/userinside.html
+++ b/userinside.html
@@ -87,7 +87,7 @@
           </div>
         </div>
         <p id="usernews" class="w">XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
-        <div class="row" style="padding-top: 200px;">
+        <div class="row" >
         <div class="col-30u w">
           REFERNENCE
         </div>
@@ -98,7 +98,7 @@
       <center style="padding-top: 10px;">
       <button class="greenbtn w">ACCEPT</button>
       <button class="redbtn w">DELETE</button>
-      <button class="yelbtn w">BACK</button>
+      <button class="yelbtn">BACK</button>
       </center>
       </div>
      </div>
