--- a/test.html
+++ b/test.html
@@ -9,24 +9,34 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="BG.css">
   <link href="https://fonts.googleapis.com/css?family=Prompt" rel="stylesheet">
+  <script src="bgjs.js" defer></script>
   <title></title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body{
-      background-image:url(ECHOAX-2.png),url(BG-3C.png);
-      background-position: top center;
-      background-repeat: no-repeat,repeat;
+    body, html {
+    height: 100%;
+    margin: 0;
+    }
+    .bga{
+      background-image: url(https://i.imgur.com/TniTm3s.png);
+      background-position: center;
+      position: fixed;
+      background-repeat: no-repeat;
+      background-size: cover;
+      height: 100%;
+      width: 100%;
     }
   </style>
 </head>
-<body>  
+<body class="bga">  
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="main.html">
-    <img src="https://i.imgur.com/sCp6LdA.png" title="source: imgur.com" height="50px" alt="">
-  </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-
+  <a class="navbar-brand" href="main.html">
+    <img src="https://i.imgur.com/sCp6LdA.png" height="50px" alt="" style="padding-top: 5px;">
+  </a>
+  <i id="search"><img src="https://i.imgur.com/P9fd36x.png" height="50px"></i>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
     <i id="search" class="fas fa-search fa-2x "></i>
@@ -67,6 +77,6 @@
     
   </div>
 </nav>
-  <script src="bgjs.js"></script>
+  
 </body>
 </html>
