--- a/ECHO.html
+++ b/ECHO.html
@@ -14,15 +14,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body background="https://i.imgur.com/gaFKvWi.png" class="bg" >	
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <a class="navbar-brand" href="main.html">
-    <img src="https://i.imgur.com/sCp6LdA.png" height="50px" alt="" style="padding-top: 5px;">
-  </a>
-  <i id="search"><img src="https://i.imgur.com/P9fd36x.png" height="50px"></i>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <a class="navbar-brand" href="main.html">
+        <img src="https://i.imgur.com/iDxaR3O.png" height="50px" alt="" style="padding-top: 5px;">
+      </a>
+      <i id="search"><img src="https://i.imgur.com/P9fd36x.png" height="50px"></i>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <div class="search-form">
+              <form>
+                <input type="text" name="" placeholder="SEARCH">
+              </form>
+          </div>
     <ul class="navbar-nav mr-auto">
     
       <li class="nav-item ">
@@ -38,21 +43,22 @@
         <a class="nav-link" href="aboutus.html">ABOUT US</a>
       </li>      
     </ul>
-    <div class="search-form">
-      <form>
-        <input type="text" name="" placeholder="SEARCH">
-      </form>
-    </div> 
   <a data-toggle="dropdown" class="nav-link " href="#" id="log">USERNAME<span class="caret"></span></a>
-      <ul class="dropdown-menu dropdown-menu-right bb">          
-        <li>
-          <img src="hoax.png" width="100px" height="100px" style="margin-left: 27px">
-          <div class="w"><center>USERNAME</center></div>
-          <a href="BG-profile.html"><div class="w status" onclick="opentab(event, 'OVERVIEW')">OVERVIEW</div></a>
-          <a href="BG-profile.html"><div class="w status" onclick="opentab(event, 'STAT')">STAT</div></a>
-           <input type="submit" class="btn btn-primary btn-block" value="LOG OUT">
-        </li>
-      </ul>
+  <ul class="dropdown-menu dropdown-menu-right blog">         
+    <li>
+      <form  >
+        <div class="form-group">
+          <label for="user"  class="w">USERNAME</label>
+          <input type="text" class="form-control" placeholder="Username" required="required">
+        </div>
+        <div class="form-group">
+          <label for="password" class="w">PASSWORD</label>
+          <input type="password" class="form-control" placeholder="Password" required="required">
+        </div>
+         <center><input type="submit" class="greenbtn w" value="Login"></center> 
+        </form>
+    </li>
+  </ul>
   </div>
 </nav>
 <center class="w" style ="font-size: 30px; "><d style="color: red">ECHO</d> : SEND TO SHARE SOME LIES TO OTHER</center> 
