--- a/aboutus.html
+++ b/aboutus.html
@@ -15,14 +15,19 @@
 </head>
 <body  class="bgus">  
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <a class="navbar-brand" href="main.html">
-    <img src="https://i.imgur.com/sCp6LdA.png" height="50px" alt="" style="padding-top: 5px;">
-  </a>
-  <i id="search"><img src="https://i.imgur.com/P9fd36x.png" height="50px"></i>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+      <a class="navbar-brand" href="main.html">
+        <img src="https://i.imgur.com/iDxaR3O.png" height="50px" alt="" style="padding-top: 5px;">
+      </a>
+      <i id="search"><img src="https://i.imgur.com/P9fd36x.png" height="50px"></i>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="search-form">
+          <form>
+            <input type="text" name="" placeholder="SEARCH">
+          </form>
+        </div>
     <ul class="navbar-nav mr-auto">
       <li class="nav-item ">
         <a class="nav-link" href="new.html">NEW</a>
@@ -37,26 +42,23 @@
         <a class="nav-link" href="aboutus.html">ABOUT US</a>
       </li>       
     </ul>
-    <div class="search-form">
-      <form>
-        <input type="text" name="" placeholder="SEARCH">
-      </form>
-    </div> 
   <a class="nav-link w" href="BG-Sign.html">SIGN UP</a>
   <a data-toggle="dropdown" class="nav-link " href="#" id="log">Login</a>
-      <ul class="dropdown-menu dropdown-menu-right">         
-        <li>
-          <form action="/examples/actions/confirmation.php" method="post">
-            <div class="form-group">
-              <input type="text" class="form-control" placeholder="Username" required="required">
-            </div>
-            <div class="form-group">
-              <input type="password" class="form-control" placeholder="Password" required="required">
-            </div>
-              <input type="submit" class="btn btn-primary btn-block" value="Login">
-            </form>
-        </li>
-      </ul>
+  <ul class="dropdown-menu dropdown-menu-right blog">         
+    <li>
+      <form  >
+        <div class="form-group">
+          <label for="user"  class="w">USERNAME</label>
+          <input type="text" class="form-control" placeholder="Username" required="required">
+        </div>
+        <div class="form-group">
+          <label for="password" class="w">PASSWORD</label>
+          <input type="password" class="form-control" placeholder="Password" required="required">
+        </div>
+         <center><input type="submit" class="greenbtn w" value="Login"></center> 
+        </form>
+    </li>
+  </ul>
   </div>
 </nav>
 <center><img src="https://i.imgur.com/3ZXqJR5.png" width="60%" style="margin:30px;"></center>
