--- a/adminprofile.html
+++ b/adminprofile.html
@@ -19,8 +19,15 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <a class="navbar-brand" href="main.html">
-    <img src="https://i.imgur.com/sCp6LdA.png" height="50px" alt="" style="padding-top: 5px;">
+    <img src="https://i.imgur.com/iDxaR3O.png" height="50px" alt="" style="padding-top: 5px;">
   </a>
+  <i id="search"><img src="https://i.imgur.com/P9fd36x.png" height="50px"></i>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="search-form">
+      <form>
+        <input type="text" name="" placeholder="SEARCH">
+      </form>
+    </div>
   <i id="search"><img src="https://i.imgur.com/P9fd36x.png" height="50px"></i>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
@@ -38,11 +45,6 @@
         <a class="nav-link" href="aboutus.html">ABOUT US</a>
       </li>      
     </ul>
-    <div class="search-form">
-      <form>
-        <input type="text" name="" placeholder="SEARCH">
-      </form>
-    </div> 
   <a data-toggle="dropdown" class="nav-link " href="#" id="log">USERNAME<span class="caret"></span></a>
       <ul class="dropdown-menu dropdown-menu-right bb">          
         <li>
