--- a/navlogin.html
+++ b/navlogin.html
@@ -14,15 +14,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body background="BG-3C.png">	
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <a class="navbar-brand" href="main.html">
-    <img src="https://i.imgur.com/sCp6LdA.png" height="50px" alt="" style="padding-top: 5px;">
-  </a>
-  <i id="search"><img src="https://i.imgur.com/P9fd36x.png" height="50px"></i>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand" href="main.html">
+          <img src="https://i.imgur.com/iDxaR3O.png" height="50px" alt="" style="padding-top: 5px;">
+        </a>
+        <i id="search"><img src="https://i.imgur.com/P9fd36x.png" height="50px"></i>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="search-form">
+                <form>
+                  <input type="text" name="" placeholder="SEARCH">
+                </form>
+            </div>
     <ul class="navbar-nav mr-auto">
     
       <li class="nav-item ">
@@ -38,11 +43,6 @@
         <a class="nav-link" href="aboutus.html">ABOUT US</a>
       </li>      
     </ul>
-    <div class="search-form">
-      <form>
-        <input type="text" name="" placeholder="SEARCH">
-      </form>
-    </div> 
   <a data-toggle="dropdown" class="nav-link " href="#" id="log">USERNAME<span class="caret"></span></a>
       <ul class="dropdown-menu dropdown-menu-right bb">          
         <li>
