--- a/popular.html
+++ b/popular.html
@@ -18,88 +18,94 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <a class="navbar-brand" href="main.html">
-    <img src="https://i.imgur.com/sCp6LdA.png" height="50px" alt="" style="padding-top: 5px;">
+    <img src="https://i.imgur.com/iDxaR3O.png" height="50px" alt="" style="padding-top: 5px;">
   </a>
   <i id="search"><img src="https://i.imgur.com/P9fd36x.png" height="50px"></i>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <div class="search-form">
+          <form>
+            <input type="text" name="" placeholder="SEARCH">
+          </form>
+      </div>
     <ul class="navbar-nav mr-auto">
-
-    
-      <li class="nav-item ">
-        <a class="nav-link" href="new.html">NEW</a>
-      </li>
-      <li class="nav-item active ">
-        <a class="nav-link" href="popular.html">POPULAR</a>
-      </li>
-      <li class="nav-item ">
-        <a class="nav-link" href="BG3c.html">CATEGORY</a>
-      </li>
-      <li class="nav-item ">
-        <a class="nav-link" href="aboutus.html">ABOUT US</a>
-      </li>      
+        <li class="nav-item ">
+            <a class="nav-link" href="new.html">NEW</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="popular.html">POPULAR</a>
+          </li>
+          <li class="nav-item ">
+            <a class="nav-link" href="BG3c.html">CATEGORY</a>
+          </li>
+          <li class="nav-item ">
+            <a class="nav-link" href="aboutus.html">ABOUT US</a>
+          </li>      
     </ul>
-    <div class="search-form">
-      <form>
-        <input type="text" name="" placeholder="SEARCH">
-      </form>
-    </div> 
   <a class="nav-link w" href="BG-Sign.html">SIGN UP</a>
   <a data-toggle="dropdown" class="nav-link " href="#" id="log">Login</a>
-      <ul class="dropdown-menu dropdown-menu-right">         
-        <li>
-          <form action="/examples/actions/confirmation.php" method="post">
-            <div class="form-group">
-              <input type="text" class="form-control" placeholder="Username" required="required">
-            </div>
-            <div class="form-group">
-              <input type="password" class="form-control" placeholder="Password" required="required">
-            </div>
-              <input type="submit" class="btn btn-primary btn-block" value="Login">
-            </form>
-        </li>
-      </ul>
-    
+  <ul class="dropdown-menu dropdown-menu-right blog">         
+    <li>
+      <form  >
+        <div class="form-group">
+          <label for="user"  class="w">USERNAME</label>
+          <input type="text" class="form-control" placeholder="Username" required="required">
+        </div>
+        <div class="form-group">
+          <label for="password" class="w">PASSWORD</label>
+          <input type="password" class="form-control" placeholder="Password" required="required">
+        </div>
+         <center><input type="submit" class="greenbtn w" value="Login"></center> 
+        </form>
+    </li>
+  </ul>
   </div>
 </nav>
-<div class="htop">
-<img src="https://i.imgur.com/Dhhew9n.jpg"  width="100%" >
-<div class="topleft w">POPULAR</div>
-<div class="bottomleft w" ><br>SEE WHAT ARE NEW LIES HERE.</div>
-</div>
-
- <div class="container">
-  <div class="row">
-     <div class="col-3 card backp" style="height: 400px"><a href="politic1.html">
-      <img src="https://i.imgur.com/hHQOHIb.jpg" height="250px" style="width: 100%">
-      <div class="container">
-        <header class="black"><b>TOPIC1</b></header>
-        <p class="black">DESCRIPTION OF TOPIC 1</p></a>
-        <div class="gray">BY ADMIN<br>POSTED ON XX XX XX</div>
-        <div style="float: right;"><input type="button" name="vote" value="YES"> <input type="button" name="vote" value="NO"></div> 
+<div class="container-fluid" style="padding:0%">
+    <img src="https://i.imgur.com/Gv1zJMv.jpg" style="width:100%" >
+  </div>
+<div class="container-fluid">
+    <div id="headn">FAKE NEWS</div>
+  </div>
+  <div class="container-fluid">
+      <div class="row no-gutters">
+          <div class="col-33card">
+              <div class="card backphish">
+                  <img src="https://i.imgur.com/hHQOHIb.jpg" alt="headpic" style="width:100%">
+                  <div class="container">
+                    <div class="ntopic">www.XXXXXXXXXXX.com</div> 
+                    <div class="ndes">DESCRIPTION OF TOPIC1</div> 
+                    <div class="ndt">BY ADMIN</div> 
+                    <div class="ndt">POSTED 00 XXXXXXXXX 0000</div>
+                    <div style="float: right;"><input type="button" name="vote" value="YES"> 00000 <input type="button" name="vote" value="NO"> 00000 </div>
+                  </div>
+              </div>
+          </div>
+          <div class="col-33card">
+              <div class="card backp">
+                  <img src="https://i.imgur.com/hHQOHIb.jpg" alt="headpic" style="width:100%">
+                  <div class="container">
+                    <div class="ntopic">TOPIC1</div> 
+                    <div class="ndes">DESCRIPTION OF TOPIC1</div> 
+                    <div class="ndt">BY ADMIN</div> 
+                    <div class="ndt">POSTED 00 XXXXXXXXX 0000</div>
+                    <div style="float: right;"><input type="button" name="vote" value="YES"> 00000 <input type="button" name="vote" value="NO"> 00000 </div>
+                  </div>
+              </div>
+          </div>
+          <div class="col-33card">
+              <div class="card backhoax">
+                  <img src="https://i.imgur.com/hHQOHIb.jpg" alt="headpic" style="width:100%">
+                  <div class="container">
+                    <div class="ntopic">TOPIC1</div> 
+                    <div class="ndes">DESCRIPTION OF TOPIC1</div> 
+                    <div class="ndt">BY ADMIN</div> 
+                    <div class="ndt">POSTED 00 XXXXXXXXX 0000</div>
+                    <div style="float: right;"><input type="button" name="vote" value="YES"> 00000 <input type="button" name="vote" value="NO"> 00000 </div>
+                  </div>
+              </div>
+          </div>
       </div>
-    </div>
-    <div class="col-1"></div>  
-    <div class="col-3 card backp" style="height: 400px"><a href="">
-      <img src="_DSC7236.jpg" height="250px" style="width: 100%">
-      <div class="container">
-        <header class="black"><b>TOPIC1</b></header>
-        <p class="black">DESCRIPTION OF TOPIC 1</p></a>
-        <div class="gray">BY ADMIN<br>POSTED ON XX XX XX</div>
-        <div style="float: right;"><input type="button" name="vote" value="YES"> <input type="button" name="vote" value="NO"></div> 
-      </div>
-    </div>
-    <div class="col-1"></div>   
-    <div class="col-3 card backp" style="height: 400px"><a href="">
-      <img src="_DSC7236.jpg" height="250px" style="width: 100%">
-      <div class="container">
-        <header class="black"><b>TOPIC1</b></header>
-        <p class="black">DESCRIPTION OF TOPIC 1</p></a>
-        <div class="gray">BY ADMIN<br>POSTED ON XX XX XX</div>
-        <div style="float: right;"><input type="button" name="vote" value="YES"> <input type="button" name="vote" value="NO"></div> 
-      </div>
-    </div>
-   </div> 
-</div>
+  </div>
 
 </body>
 </html>
