--- a/test.html
+++ b/test.html
@@ -28,19 +28,22 @@
     }
   </style>
 </head>
-<body class="bga">  
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <a class="navbar-brand" href="main.html">
-    <img src="https://i.imgur.com/sCp6LdA.png" height="50px" alt="" style="padding-top: 5px;">
-  </a>
-  <i id="search"><img src="https://i.imgur.com/P9fd36x.png" height="50px"></i>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+<body class="bg">  
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand" href="main.html">
+          <img src="https://i.imgur.com/iDxaR3O.png" height="50px" alt="" style="padding-top: 5px;">
+        </a>
+        <i id="search"><img src="https://i.imgur.com/P9fd36x.png" height="50px"></i>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="search-form">
+                <form>
+                  <input type="text" name="" placeholder="SEARCH">
+                </form>
+            </div>
     <ul class="navbar-nav mr-auto">
-    <i id="search" class="fas fa-search fa-2x "></i>
-    
       <li class="nav-item ">
         <a class="nav-link" href="#">NEW</a>
       </li>
@@ -54,11 +57,6 @@
         <a class="nav-link" href="#">ABOUT US</a>
       </li>      
     </ul>
-    <div class="search-form">
-      <form>
-        <input type="text" name="" placeholder="SEARCH">
-      </form>
-    </div> 
   <a class="nav-link w" href="BG-Sign.html">SIGN UP</a>
   <a data-toggle="dropdown" class="nav-link " href="#" id="log">Login</a>
       <ul class="dropdown-menu dropdown-menu-right">         
