--- a/BG-Hoax.html
+++ b/BG-Hoax.html
@@ -72,13 +72,13 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-lg-4  col-12">
-      	<div class="card cardbox"><center>APRIL FOOL'S DAY</center></div>
+      	<div class="card cardbox"id="hoaxcard"><center>APRIL FOOL'S DAY</center></div>
     </div>
     <div class="col-lg-4  col-12">
-      	<div class="card cardbox"><center>SCIENCE</center></div>
+      	<div class="card cardbox"id="hoaxcard"><center>SCIENCE</center></div>
     </div>
      <div class="col-lg-4  col-12">
-      	<div class="card cardbox"><center>SCIENCE</center></div>
+      	<div class="card cardbox"id="hoaxcard"><center>SCIENCE</center></div>
     </div>
   </div>
  </div>
@@ -86,13 +86,13 @@
   <div class="container-fluid">
   <div class="row">
     <div class="col-lg-4  col-12">
-      	<div class="card cardbox"><center>SCIENCE</center></div>
+      	<div class="card cardbox"id="hoaxcard"><center>SCIENCE</center></div>
     </div>
     <div class="col-lg-4  col-12">
-      	<div class="card cardbox"><center>SCIENCE</center></div>
+      	<div class="card cardbox"id="hoaxcard"><center>SCIENCE</center></div>
     </div>
     <div class="col-lg-4  col-12">
-      	<div class="card cardbox"><center>SCIENCE</center></div>
+      	<div class="card cardbox"id="hoaxcard"><center>SCIENCE</center></div>
     </div>
   </div>
  </div>
@@ -100,13 +100,13 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-lg-4  col-12 ">
-      	<div class="card cardbox"><center>SCIENCE</center></div>
+      	<div class="card cardbox"id="hoaxcard"><center>SCIENCE</center></div>
     </div>
     <div class="col-lg-4  col-12 ">
-      	<div class="card cardbox"><center>EDUCATION</center></div>
+      	<div class="card cardbox"id="hoaxcard"><center>EDUCATION</center></div>
     </div>
      <div class="col-lg-4  col-12 ">
-      	<div class="card cardbox"><center>SCIENCE</center></div>
+      	<div class="card cardbox"id="hoaxcard"><center>SCIENCE</center></div>
     </div>
   </div>
 </div>
