--- a/BG-fake.html
+++ b/BG-fake.html
@@ -71,39 +71,39 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-lg-4  col-12">
-      	<a href="polithic.html"><div class="card cardbox black"><center>POLITICS</center></div></a>
+      	<a href="polithic.html"><div class="card cardbox " id="fakecard"><center>POLITICS</center></div></a>
     </div>
     <div class="col-lg-4  col-12">
-      	<a href="polithic.html"><div class="card cardbox black"><center>ECONOMICS</center></div></a>
+      	<a href="polithic.html"><div class="card cardbox "id="fakecard"><center>ECONOMICS</center></div></a>
     </div>
     <div class="col-lg-4  col-12">
-      	<a href="polithic.html"><div class="card cardbox black"><center>HEALTH</center></div></a>
+      	<a href="polithic.html"><div class="card cardbox "id="fakecard"><center>HEALTH</center></div></a>
     </div>
   </div>
  </div>
   <div class="container-fluid">
   <div class="row">
     <div class="col-lg-4  col-12">
-      	<a href="polithic.html"><div class="card cardbox black"><center>CRIME</center></div></a>
+      	<a href="polithic.html"><div class="card cardbox "id="fakecard"><center>CRIME</center></div></a>
     </div>
     <div class="col-lg-4  col-12">
-      	<a href="polithic.html"><div class="card cardbox black"><center>TECHNOLOGY</center></div></a>
+      	<a href="polithic.html"><div class="card cardbox "id="fakecard"><center>TECHNOLOGY</center></div></a>
     </div>
     <div class="col-lg-4  col-12">
-      	<a href="polithic.html"><div class="card cardbox black"><center>SPORT</center></div></a>
+      	<a href="polithic.html"><div class="card cardbox "id="fakecard"><center>SPORT</center></div></a>
     </div>
   </div>
  </div>
 <div class="container-fluid">
   <div class="row">
     <div class="col-lg-4  col-12">
-      	<a href="polithic.html"><div class="card cardbox black"><center>ENTERTAINMENT</center></div></a>
+      	<a href="polithic.html"><div class="card cardbox "id="fakecard"><center>ENTERTAINMENT</center></div></a>
     </div>
     <div class="col-lg-4  col-12">
-      	<a href="polithic.html"><div class="card cardbox black"><center>EDUCATION</center></div></a>
+      	<a href="polithic.html"><div class="card cardbox "id="fakecard"><center>EDUCATION</center></div></a>
     </div>
     <div class="col-lg-4  col-12">
-      	<a href="polithic.html"><div class="card cardbox black"><center>SCIENCE</center></div></a>
+      	<a href="polithic.html"><div class="card cardbox "id="fakecard"><center>SCIENCE</center></div></a>
     </div>
   </div>
 </div>
