--- a/BG-profile.html
+++ b/BG-profile.html
@@ -14,7 +14,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body background="https://i.imgur.com/Fg7WsNm.png" class="bg">	
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -33,7 +33,7 @@
       <li class="nav-item ">
         <a class="nav-link" href="new.html">NEW</a>
       </li>
-      <li class="nav-item active ">
+      <li class="nav-item ">
         <a class="nav-link" href="popular.html">POPULAR</a>
       </li>
       <li class="nav-item ">
@@ -57,44 +57,41 @@
 </nav>
 <div class=" container box">
 	<div class="row">
-  <div class="col-25">
-		<img src="Phishing.png" width="150px" height="150px" style="float: left; border-radius: 50%;">
-  </div> 
-  <div class="col-75">
-		<h class="w"><r> Username </r><br><n> Firstname Lastname </n><br><m> motto. </m></h>
-	</div> 
+    <div class="col-25">
+	    <center>	<img src="https://i.imgur.com/TBu6Oc0.jpg" width="150px" height="150px" style=" border-radius: 50%;"></center>
+    </div> 
+    <div class="col-75">
+		  <h class="w"><r> Username </r><br><n> Firstname Lastname </n><br><m> motto. </m></h>
+	  </div> 
   </div>
   <div class="row">
     <div class="col-25">
-	   <div class="card" style="float: left;">
-		  <hd>GENDER</hd>
-		  xxxxxx
-		  <hd>BIRTH DATE</hd>
-		  xx xx xx
-		  <hd>LOCATION</hd>
-		  xxxxxxxxxxxxxxxx
-		  <hd>PHONE NUMBER</hd>
-		  +00 000000000
-		  <center><input type="button" name="edit" value="EDIT PROFILE"></center>
-	   </div>
+	    <div class="card" >
+		    <hd>GENDER</hd>
+		    xxxxxx
+		    <hd>BIRTH DATE</hd>
+		    xx xx xx
+		    <hd>LOCATION</hd>
+		    xxxxxxxxxxxxxxxx
+		    <center><input type="button" name="edit" value="EDIT PROFILE" onclick="location.href='edit.html';"></center>
+	    </div>
     </div>
     <div class="col-75">
-	<div class="tab">
-  		<button class="tablinks active" onclick="opentab(event, 'OVERVIEW')">OVERVIEW</button>
-  		<button class="tablinks" onclick="opentab(event, 'STAT')">STAT</button>
-  		<a href="ECHO.html"><button class="w" style="float: right; background-color: red; border-radius: 10px;">ECHO</button></a>
-	</div>
-	<div id="OVERVIEW" class="tabcontent" style="display: block; ">
-  	<h3>E-mail</h3>
-  	<p>XXXXXX@XXXX.COM</p>
-	</div>
-
-  <div id="STAT" class="tabcontent">
-   <h3>Paris</h3>
-    <p>Paris is the capital of France.</p> 
+	    <div class="tab">
+  		  <button class="tablinks active" onclick="opentab(event, 'OVERVIEW')">OVERVIEW</button>
+  		  <button class="tablinks" onclick="opentab(event, 'STAT')">STAT</button>
+  		  <a href="ECHO.html"><button class="w" style="float: right; background-color: red; border-radius: 10px;">ECHO</button></a>
+    	</div>
+	    <div id="OVERVIEW" class="tabcontent" style="display: block; ">
+  	    <h3>E-mail</h3>
+  	    <p>XXXXXX@XXXX.COM</p>
+	    </div>
+      <div id="STAT" class="tabcontent">
+        <h3>VOTE</h3>
+        <p>Paris is the capital of France.</p> 
+      </div>
+    </div>
   </div>
-</div>
-</div>
 </div>
 
 </body>
