--- a/BG-Sign.html
+++ b/BG-Sign.html
@@ -103,17 +103,10 @@
             </div>
           </div> 
         </div>   
-        <div class="row bio ">
-          <div class="col-50sl">
-            <label for="location">LOCATION</label>
-            <input type="text" name="location" required>
-          </div>
-          <div class="col-50s">
-            <label for="phone-number">PHONE NUMBER</label>
-            <input type="text" name="phone-number" required>
-          </div> 
+        <div class="row biobio">
+          <label for="location">LOCATION</label>
+          <input type="text" name="bio" maxlength="100" required>
         </div>
- 
         <div class="row biobio">
           <label for="bio">BIO</label>
           <input type="text" name="bio" maxlength="100" required>
