--- a/navlogin.html
+++ b/navlogin.html
@@ -13,27 +13,26 @@
 	<title></title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body background="BG-3C.png">	
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <a class="navbar-brand" href="main.html">
-          <img src="https://i.imgur.com/iDxaR3O.png" height="50px" alt="" style="padding-top: 5px;">
-        </a>
-        <i id="search"><img src="https://i.imgur.com/P9fd36x.png" height="50px"></i>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <div class="search-form">
-                <form>
-                  <input type="text" name="" placeholder="SEARCH">
-                </form>
-            </div>
+<body background="https://i.imgur.com/Fg7WsNm.png" class="bg">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <a class="navbar-brand" href="main.html">
+      <img src="https://i.imgur.com/iDxaR3O.png" height="50px" alt="" style="padding-top: 5px;">
+    </a>
+    <i id="search"><img src="https://i.imgur.com/P9fd36x.png" height="50px"></i>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <div class="search-form">
+        <form>
+          <input type="text" name="" placeholder="SEARCH">
+        </form>
+      </div>
     <ul class="navbar-nav mr-auto">
-    
       <li class="nav-item ">
         <a class="nav-link" href="new.html">NEW</a>
       </li>
-      <li class="nav-item active ">
+      <li class="nav-item">
         <a class="nav-link" href="popular.html">POPULAR</a>
       </li>
       <li class="nav-item ">
@@ -43,20 +42,17 @@
         <a class="nav-link" href="aboutus.html">ABOUT US</a>
       </li>      
     </ul>
-  <a data-toggle="dropdown" class="nav-link " href="#" id="log">USERNAME<span class="caret"></span></a>
+    <a data-toggle="dropdown" class="nav-link " href="#" id="log">USERNAME<span class="caret"></span></a>
       <ul class="dropdown-menu dropdown-menu-right bb">          
         <li>
           <img src="hoax.png" width="100px" height="100px" style="margin-left: 27px">
           <div class="w"><center>USERNAME</center></div>
-          <div class="w">OVERVIEW</div>
-          <div class="w">STAT</div>
-           <input type="submit" class="btn btn-primary btn-block" value="LOG OUT">
+          <a href="BG-profile.html" class="w status" onclick="opentab(event, 'OVERVIEW')">OVERVIEW</a><br>
+          <a href="BG-profile.html" class="w status" onclick="opentab(event, 'STAT')">STAT</a><br>
+          <center> <input type="submit" class="btn btn-primary redbtn" value="LOG OUT"></center>
         </li>
       </ul>
-    
-  </div>
-</nav>
-
-
+    </div>
+  </nav>
 </body>
 </html>
