--- a/userecho.html
+++ b/userecho.html
@@ -14,58 +14,57 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body background="https://i.imgur.com/Fg7WsNm.png" class="bg">	
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <a class="navbar-brand" href="main.html">
-        <img src="https://i.imgur.com/iDxaR3O.png" height="50px" alt="" style="padding-top: 5px;">
-      </a>
-      <i id="search"><img src="https://i.imgur.com/P9fd36x.png" height="50px"></i>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <div class="search-form">
-              <form>
-                <input type="text" name="" placeholder="SEARCH">
-              </form>
-          </div>
-    <ul class="navbar-nav mr-auto">
-    
-      <li class="nav-item ">
-        <a class="nav-link" href="new.html">NEW</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="popular.html">POPULAR</a>
-      </li>
-      <li class="nav-item ">
-        <a class="nav-link" href="BG3c.html">CATEGORY</a>
-      </li>
-      <li class="nav-item ">
-        <a class="nav-link" href="aboutus.html">ABOUT US</a>
-      </li>      
-    </ul>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <a class="navbar-brand" href="main.html">
+    <img src="https://i.imgur.com/iDxaR3O.png" height="50px" alt="" style="padding-top: 5px;">
+  </a>
+  <i id="search"><img src="https://i.imgur.com/P9fd36x.png" height="50px"></i>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="search-form">
+      <form>
+        <input type="text" name="" placeholder="SEARCH">
+      </form>
+    </div>
+  <ul class="navbar-nav mr-auto">
+    <li class="nav-item ">
+      <a class="nav-link" href="new.html">NEW</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="popular.html">POPULAR</a>
+    </li>
+    <li class="nav-item ">
+      <a class="nav-link" href="BG3c.html">CATEGORY</a>
+    </li>
+    <li class="nav-item ">
+      <a class="nav-link" href="aboutus.html">ABOUT US</a>
+    </li>      
+  </ul>
   <a data-toggle="dropdown" class="nav-link " href="#" id="log">USERNAME<span class="caret"></span></a>
-      <ul class="dropdown-menu dropdown-menu-right bb">          
-        <li>
-          <img src="hoax.png" width="100px" height="100px" style="margin-left: 27px">
-          <div class="w"><center>USERNAME</center></div>
-          <div href="BG-profile.html" class="w status" onclick="opentab(event, 'OVERVIEW')">OVERVIEW</div>
-          <div href="BG-profile.html" class="w status" onclick="opentab(event, 'STAT')">STAT</div>
-           <input type="submit" class="btn btn-primary btn-block" value="LOG OUT">
-        </li>
-      </ul>
+    <ul class="dropdown-menu dropdown-menu-right bb">          
+      <li>
+        <img src="hoax.png" width="100px" height="100px" style="margin-left: 27px">
+        <div class="w"><center>USERNAME</center></div>
+        <a href="BG-profile.html" class="w status" onclick="opentab(event, 'OVERVIEW')">OVERVIEW</a><br>
+        <a href="BG-profile.html" class="w status" onclick="opentab(event, 'STAT')">STAT</a><br>
+        <center> <input type="submit" class="btn btn-primary redbtn" value="LOG OUT"></center>
+      </li>
+    </ul>
   </div>
 </nav>
 <div id="headca"><center> USER'S ECHO</center></div>
 <div class="column">
-<a href="usertopic.html" style="text-decoration: none;">
-<div class="card flex-row flex-wrap backp">
-  <img class="card-img-left" src="https://i.imgur.com/TBu6Oc0.jpg" width="200px" height="150px" alt="Card image cap">
-  <div class="card-body">
-    <h5 class="card-title black">TOPIC 1</h5>
-    <p class="card-text black">xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.</p>
-  </div>
-</div>
-</a>
+  <a href="usertopic.html" style="text-decoration: none;">
+    <div class="card flex-row flex-wrap backp">
+      <img class="card-img-left" src="https://i.imgur.com/TBu6Oc0.jpg" width="200px" height="150px" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title black">TOPIC 1</h5>
+        <p class="card-text black">xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.</p>
+      </div>
+    </div>
+  </a>
 </div>
 <div class="column">
 <a href="phisingp1.html" style="text-decoration: none;">
