--- a/BG-Sign.html
+++ b/BG-Sign.html
@@ -62,7 +62,7 @@
   </div>
 </nav>
 <div id="headsign" class="w"><center>CREATE YOUR OWN ACCOUNT</center></div> 
-<div class="container w">
+<div class="container w cen">
   <form action="action_page.php">
   <center><p class="w">PLEASE FILL IN THIS FORM TO CREATE AN ACCOUNT.</p></center>
    <div class="row">
