--- a/edit.html
+++ b/edit.html
@@ -55,9 +55,8 @@
   </div>
 </nav>
 <div id="headsign" class="w"><center>EDIT YOUR PROFILE</center></div>
-
     
-<div class="container w">
+<div class="container w cen">
   <form action="action_page.php">
    <div class="row">
       <div class="col-40 useremailpass">
@@ -69,10 +68,6 @@
         <input type="password" name="pwd">
         <label for="password">CONFIRM YOUR NEW PASSWORD</label>
         <input type="password" name="re-pwd">
-        <center class="btnedit1" > 
-            <button class="greenbtn w">FINISH</button>
-            <button class="redbtn w">CANCEL</button>
-        </center>
       </div>
 
       <div class="col-60 ">
@@ -108,11 +103,11 @@
         </div>
       </div>
     </div>
-</div>
-    <center class="btnedit2" style="padding-top: 10px;"> 
-        <button class="greenbtn w">FINISH</button>
-        <button class="redbtn w">CANCEL</button>
-    </center>
+  <center class="btnedit2" style="padding-top: 10px;"> 
+    <button class="greenbtn w">FINISH</button>
+    <button class="redbtn w">CANCEL</button>
+  </center>
+  </div>
   </form>
 </div>
 
