--- a/BG-fake.html
+++ b/BG-fake.html
@@ -43,35 +43,21 @@
       </li>      
     </ul>
   <a class="nav-link w" href="BG-Sign.html">SIGN UP</a>
-  <a data-toggle="dropdown" class="nav-link " href="#" id="log">Login</a>
-  <ul class="dropdown-menu dropdown-menu-right blog">         
-    <li>
-      <form  >
-        <div class="form-group">
-          <label for="user"  class="w">USERNAME</label>
-          <input type="text" class="form-control" placeholder="Username" required="required">
-        </div>
-        <div class="form-group">
-          <label for="password" class="w">PASSWORD</label>
-          <input type="password" class="form-control" placeholder="Password" required="required">
-        </div>
-         <center><input type="submit" class="greenbtn w" value="Login"></center> 
-        </form>
-    </li>
-  </ul>
+  <a class="nav-link " href="BG-Login.html" id="log">Login</a>
   </div>
 </nav>
 <div id="headca"><center>CATEGORY</center></div>
-<div >
-  <form class="search-topic">
-        <input type="text" name="" placeholder="SEARCH" id="1">
+<div>
+  <form class="search-topic" style="display: inline;">
+    <input type="text" name="" placeholder="SEARCH" style="width:90%">&nbsp;<i class="fas fa-times w" id="1"></i>
   </form>
   <div id="fake" class="topic"><center><img id="searchbtn" src="https://i.imgur.com/P9fd36x.png" ></i>FAKE NEWS</center></div> 
-  </div>
+</div>
+  <div class="row"></div>
 <div class="container-fluid">
   <div class="row">
     <div class="col-lg-4  col-12">
-      	<a href="polithic.html"><div class="card cardbox " id="fakecard"><center>POLITICS</center></div></a>
+      	<a href="polithic.html"><div class="card cardbox "id="fakecard"><center>POLITICS</center></div></a>
     </div>
     <div class="col-lg-4  col-12">
       	<a href="polithic.html"><div class="card cardbox "id="fakecard"><center>ECONOMICS</center></div></a>
