--- a/ECHO.html
+++ b/ECHO.html
@@ -78,9 +78,17 @@
         <label for="category">CATEGORY</label>
       </div>
       <div class="col-70">
-      <input type="radio"  name="gender" required>FAKE NEWS
-      <input type="radio"  name="gender" required>HOAX
-      <input type="radio"  name="gender" required>PHISHING
+      <input type="radio"  name="cate" value="" required>FAKE NEWS&emsp;<br id="rad">
+      <input type="radio"  name="cate" required>HOAX&emsp;<br id="rad">
+      <input type="radio"  name="cate" required>PHISHING&emsp;<br id="rad">
+      <input list="cate" name="cate1" value="">
+        <datalist id="cate">
+          <option value="Health">
+          <option value="Polithic">
+          <option value="Enteatainment">
+          <option value="Economic">
+          <option value="Crime">
+          </datalist>
       </div>
     </div>
     <div class="row">
