--- a/adminprofile.html
+++ b/adminprofile.html
@@ -94,8 +94,11 @@
 	</div>
 
   <div id="STAT" class="tabcontent">
-   <h3>Paris</h3>
-    <p>Paris is the capital of France.</p> 
+    <div id="STAT" class="tabcontent">
+      <h2>VOTE&ensp;&ensp;&ensp;&ensp;&ensp;<x style="color: green">YES</x>&ensp;<x style="color: red">NO</x></h2>
+      <div>Fake news&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp; 0000&ensp;&ensp;&ensp;0000</div>
+      <div>Hoax&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp; 0000&ensp;&ensp;&ensp;0000</div>
+    </div>
   </div>
 </div>
 </div>
