--- a/BG-Hoax.html
+++ b/BG-Hoax.html
@@ -45,27 +45,13 @@
     </ul> 
   <a class="nav-link w" href="BG-Sign.html">SIGN UP</a>
   <a data-toggle="dropdown" class="nav-link " href="#" id="log">Login</a>
-  <ul class="dropdown-menu dropdown-menu-right blog">         
-    <li>
-      <form  >
-        <div class="form-group">
-          <label for="user"  class="w">USERNAME</label>
-          <input type="text" class="form-control" placeholder="Username" required="required">
-        </div>
-        <div class="form-group">
-          <label for="password" class="w">PASSWORD</label>
-          <input type="password" class="form-control" placeholder="Password" required="required">
-        </div>
-         <center><input type="submit" class="greenbtn w" value="Login"></center> 
-        </form>
-    </li>
-  </ul>
+  <a class="nav-link " href="BG-Login.html" id="log">Login</a>
   </div>
 </nav>
 <div id="headca"><center>CATEGORY</center></div>
 <div>
-  <form class="search-topic">
-        <input type="text" id="stp" placeholder="SEARCH" autofocus>
+  <form class="search-topic" style="display: inline;">
+    <input type="text" name="" placeholder="SEARCH" style="width:90%">&nbsp;<i class="fas fa-times w" id="1"></i>
   </form>
   <div id="hoax" class="topic"><center><img id="searchbtn" src="https://i.imgur.com/P9fd36x.png" ></i>HOAX</center></div>
 </div>
