--- a/BG-Login.html
+++ b/BG-Login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<script src="http://code.jquery.com/jquery-3.4.0.js"integrity="sha256-DYZMCC8HTC+QDr5QNaIcfR7VSPtcISykd+6eSmBW5qo=" crossorigin="anonymous"></script>
+  <script src="http://code.jquery.com/jquery-3.4.0.js"integrity="sha256-DYZMCC8HTC+QDr5QNaIcfR7VSPtcISykd+6eSmBW5qo=" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -13,29 +13,30 @@
 	<title></title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body background="https://i.imgur.com/gaFKvWi.png" class="bg">	
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <a class="navbar-brand" href="main.html">
-        <img src="https://i.imgur.com/iDxaR3O.png" height="50px" alt="" style="padding-top: 5px;">
-      </a>
-      <i id="search"><img src="https://i.imgur.com/P9fd36x.png" height="50px"></i>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <div class="search-form">
-              <form>
-                <input type="text" name="" placeholder="SEARCH">
-              </form>
-          </div>
+<body class="bgus">	
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand" href="main.html">
+          <img src="https://i.imgur.com/iDxaR3O.png" height="50px" alt="" style="padding-top: 5px;">
+        </a>
+        <i id="search"><img src="https://i.imgur.com/P9fd36x.png" height="50px"></i>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="search-form">
+                <form>
+                  <input type="text" name="" placeholder="SEARCH">
+                </form>
+            </div>
     <ul class="navbar-nav mr-auto">
+    
       <li class="nav-item ">
         <a class="nav-link" href="new.html">NEW</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item ">
         <a class="nav-link" href="popular.html">POPULAR</a>
       </li>
-      <li class="nav-item active">
+      <li class="nav-item ">
         <a class="nav-link" href="BG3c.html">CATEGORY</a>
       </li>
       <li class="nav-item ">
@@ -46,23 +47,19 @@
   <a class="nav-link " href="BG-Login.html" id="log">Login</a>
   </div>
 </nav>
-<div id="headca"><center>CATEGORY</center></div>
-
-  <div class="row no-gutters">
-    <div class="col-33">
-    	<a href="BG-fake.html"><img id="c1" src="https://i.imgur.com/N5Xm40C.jpg" style="width: 100%" >
-      		<div class="centered w"><center>FAKE NEWS</center></div></a>
-    </div>
-    <div class="col-33">
-      <a href="BG-Hoax.html"><img id="c2" src="https://i.imgur.com/RnK3ORD.jpg" style="width: 100%" >
-      	<div class="centered w"><center>HOAX</center></div></a>
-    </div>
-     <div class="col-33">
-      <a href="BG-Phising.html"><img id="c3" src="https://i.imgur.com/TBu6Oc0.jpg" style="width: 100%" >
-      	<div class="centered w"><center>PHISHING</center></div></a>
-    </div>
-  </div>
-
+<div style="display: inline; background-color:black; position:fixed; top:50%; left:50%; transform: translate(-50%,-50%);">
+    <form>
+        <div class="form-group">
+            <label for="user"  class="w">USERNAME</label>
+            <input type="text" class="form-control" placeholder="Username" required="required">
+          </div>
+          <div class="form-group">
+            <label for="password" class="w">PASSWORD</label>
+            <input type="password" class="form-control" placeholder="Password" required="required">
+          </div>
+           <center><input type="submit" class="greenbtn w" value="Login"></center>
+    </form>
+</div>  
 
 </body>
 </html>
