--- a/BG-Phising.html
+++ b/BG-Phising.html
@@ -44,55 +44,55 @@
       </li>      
     </ul>
   <a class="nav-link w" href="BG-Sign.html">SIGN UP</a>
-  <a data-toggle="dropdown" class="nav-link " href="#" id="log">Login</a>
-  <ul class="dropdown-menu dropdown-menu-right blog">         
-    <li>
-      <form  >
-        <div class="form-group">
-          <label for="user"  class="w">USERNAME</label>
-          <input type="text" class="form-control" placeholder="Username" required="required">
-        </div>
-        <div class="form-group">
-          <label for="password" class="w">PASSWORD</label>
-          <input type="password" class="form-control" placeholder="Password" required="required">
-        </div>
-         <center><input type="submit" class="greenbtn w" value="Login"></center> 
-        </form>
-    </li>
-  </ul>
+  <a class="nav-link " href="BG-Login.html" id="log">Login</a>
   </div>
 </nav>
 <div id="headca"><center>CATEGORY</center></div>
 <div>
-  <form class="search-topic">
-    <input type="text" name="" placeholder="SEARCH" autofocus>
+  <form class="search-topic" style="display: inline;">
+    <input type="text" name="" placeholder="SEARCH" style="width:90%">&nbsp;<i class="fas fa-times w" id="1"></i>
   </form>
 <div id="phising" class="topic"><center><img id="searchbtn" src="https://i.imgur.com/P9fd36x.png" ></i>PHISHING</center></div>
 </div>      
-   
-<div class="column ">
-  <a href="phisingp1.html">
-    <div class="ph card backphish flex-wrap flex-row">
-      <img src="https://i.imgur.com/TBu6Oc0.jpg" class="picphish" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title black">WWW.XXXXXX.COM</h5>
-          <p class="card-text black">xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</p>
+<div class="container-fluid">
+    <div class="row no-gutters">
+        <div class="col-33card">
+            <div class="card backphish">
+                <img src="https://i.imgur.com/TBu6Oc0.jpg" alt="headpic" style="width:100%">
+                <div class="container">
+                  <div class="ntopic">www.XXXXXXXXXXX.com</div> 
+                  <div class="ndes">DESCRIPTION OF TOPIC1</div> 
+                  <div class="ndt">BY ADMIN</div> 
+                  <div class="ndt">POSTED 00 XXXXXXXXX 0000</div>
+                  <div style="float: right;"><input type="button" name="vote" value="YES"> 00000 <input type="button" name="vote" value="NO"> 00000 </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-33card">
+            <div class="card backphish">
+                <img src="https://i.imgur.com/TBu6Oc0.jpg" alt="headpic" style="width:100%">
+                <div class="container">
+                  <div class="ntopic">TOPIC1</div> 
+                  <div class="ndes">DESCRIPTION OF TOPIC1</div> 
+                  <div class="ndt">BY ADMIN</div> 
+                  <div class="ndt">POSTED 00 XXXXXXXXX 0000</div>
+                  <div style="float: right;"><input type="button" name="vote" value="YES"> 00000 <input type="button" name="vote" value="NO"> 00000 </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-33card">
+            <div class="card backphish">
+                <img src="https://i.imgur.com/TBu6Oc0.jpg" alt="headpic" style="width:100%">
+                <div class="container">
+                  <div class="ntopic">TOPIC1</div> 
+                  <div class="ndes">DESCRIPTION OF TOPIC1</div> 
+                  <div class="ndt">BY ADMIN</div> 
+                  <div class="ndt">POSTED 00 XXXXXXXXX 0000</div>
+                  <div style="float: right;"><input type="button" name="vote" value="YES"> 00000 <input type="button" name="vote" value="NO"> 00000 </div>
+                </div>
+            </div>
         </div>
     </div>
-  </a>
 </div>
-
-<div class="column ">
-  <a href="phisingp1.html">
-    <div class="ph card backphish flex-wrap flex-row">
-      <img src="https://i.imgur.com/TBu6Oc0.jpg" class="picphish" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title black">WWW.XXXXXX.COM</h5>
-          <p class="card-text black">xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</p>
-        </div>
-    </div>
-  </a>
-</div>
-
 </body>
 </html>
