--- a/BG-profile.html
+++ b/BG-profile.html
@@ -22,14 +22,13 @@
         <img src="https://i.imgur.com/iDxaR3O.png" height="50px" alt="" style="padding-top: 5px;">
       </a>
       <i id="search"><img src="https://i.imgur.com/P9fd36x.png" height="50px"></i>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <div class="search-form">
-              <form>
-                <input type="text" name="" placeholder="SEARCH">
-              </form>
-          </div>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="search-form">
+      <form>
+        <input type="text" name="" placeholder="SEARCH">
+      </form>
+    </div>
     <ul class="navbar-nav mr-auto">
-    
       <li class="nav-item ">
         <a class="nav-link" href="new.html">NEW</a>
       </li>
@@ -44,15 +43,15 @@
       </li>      
     </ul>
   <a data-toggle="dropdown" class="nav-link " href="#" id="log">USERNAME<span class="caret"></span></a>
-      <ul class="dropdown-menu dropdown-menu-right bb">          
-        <li>
-          <img src="hoax.png" width="100px" height="100px" style="margin-left: 27px">
-          <div class="w"><center>USERNAME</center></div>
-          <div href="BG-profile.html" class="w status" onclick="opentab(event, 'OVERVIEW')">OVERVIEW</div>
-          <div href="BG-profile.html" class="w status" onclick="opentab(event, 'STAT')">STAT</div>
-           <input type="submit" class="btn btn-primary btn-block" value="LOG OUT">
-        </li>
-      </ul>
+    <ul class="dropdown-menu dropdown-menu-right bb">          
+      <li>
+        <img src="hoax.png" width="100px" height="100px" style="margin-left: 27px">
+        <div class="w"><center>USERNAME</center></div>
+        <div href="BG-profile.html" class="w status" onclick="opentab(event, 'OVERVIEW')">OVERVIEW</div>
+        <div href="BG-profile.html" class="w status" onclick="opentab(event, 'STAT')">STAT</div>
+        <input type="submit" class="btn btn-primary btn-block" value="LOG OUT">
+      </li>
+    </ul>
   </div>
 </nav>
 <div class=" container box">
@@ -82,13 +81,14 @@
   		  <button class="tablinks" onclick="opentab(event, 'STAT')">STAT</button>
   		  <a href="ECHO.html"><button class="w" style="float: right; background-color: red; border-radius: 10px;">ECHO</button></a>
     	</div>
-	    <div id="OVERVIEW" class="tabcontent" style="display: block; ">
-  	    <h3>E-mail</h3>
+	    <div id="OVERVIEW" class="tabcontent" style="display: block;">
+  	    <h2>E-mail</h2>
   	    <p>XXXXXX@XXXX.COM</p>
 	    </div>
       <div id="STAT" class="tabcontent">
-        <h3>VOTE</h3>
-        <p>Paris is the capital of France.</p> 
+        <h2>VOTE&ensp;&ensp;&ensp;&ensp;&ensp;<x style="color: green">YES</x>&ensp;<x style="color: red">NO</x></h2>
+        <div>Fake news&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp; 0000&ensp;&ensp;&ensp;0000</div>
+        <div>Hoax&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp; 0000&ensp;&ensp;&ensp;0000</div>
       </div>
     </div>
   </div>
