--- a/aboutus.html
+++ b/aboutus.html
@@ -43,27 +43,12 @@
       </li>       
     </ul>
   <a class="nav-link w" href="BG-Sign.html">SIGN UP</a>
-  <a data-toggle="dropdown" class="nav-link " href="#" id="log">Login</a>
-  <ul class="dropdown-menu dropdown-menu-right blog">         
-    <li>
-      <form  >
-        <div class="form-group">
-          <label for="user"  class="w">USERNAME</label>
-          <input type="text" class="form-control" placeholder="Username" required="required">
-        </div>
-        <div class="form-group">
-          <label for="password" class="w">PASSWORD</label>
-          <input type="password" class="form-control" placeholder="Password" required="required">
-        </div>
-         <center><input type="submit" class="greenbtn w" value="Login"></center> 
-        </form>
-    </li>
-  </ul>
+  <a class="nav-link " href="BG-Login.html" id="log">Login</a>
   </div>
 </nav>
 <center><img src="https://i.imgur.com/3ZXqJR5.png" width="60%" style="margin:30px;"></center>
-<div class="w" style="font-size: 30px"><center>CREATED BY<br>MR.KANTACHAT JANYA<br>MR.SARATOON KHUNSANIT</center></div>
-<div class="w" style="line-height: 1.5; font-size: 30px;"><center>THIS WEBSITE IS PART OF CSS227 WEB PROGRAMMING.<br>KING MONGKUT'S UNIVERSITY OF TECHNOLOGY THONBURI</center></div>
+<div class="w" style="font-size: 20px"><center>CREATED BY<br>MR.KANTACHAT JANYA<br>MR.SARATOON KHUNSANIT</center></div>
+<div class="w" style="line-height: 1.5; font-size: 20px;"><center>THIS WEBSITE IS PART OF CSS227 WEB PROGRAMMING.<br>KING MONGKUT'S UNIVERSITY OF TECHNOLOGY THONBURI</center></div>
 
   
 </body>
