--- a/userecho.html
+++ b/userecho.html
@@ -42,16 +42,8 @@
       <a class="nav-link" href="aboutus.html">ABOUT US</a>
     </li>      
   </ul>
-  <a data-toggle="dropdown" class="nav-link " href="#" id="log">USERNAME<span class="caret"></span></a>
-    <ul class="dropdown-menu dropdown-menu-right bb">          
-      <li>
-        <img src="hoax.png" width="100px" height="100px" style="margin-left: 27px">
-        <div class="w"><center>USERNAME</center></div>
-        <a href="BG-profile.html" class="w status" onclick="opentab(event, 'OVERVIEW')">OVERVIEW</a><br>
-        <a href="BG-profile.html" class="w status" onclick="opentab(event, 'STAT')">STAT</a><br>
-        <center> <input type="submit" class="btn btn-primary redbtn" value="LOG OUT"></center>
-      </li>
-    </ul>
+  <a  class="nav-link" style="color: white" href="BG-profile.html" >USERNAME</a>  
+    <a  class="nav-link " id="log">Logout</a>  
   </div>
 </nav>
 <div id="headca"><center> USER'S ECHO</center></div>
